# mugle-pool

./: .gitignore  README.md
docker-compose/: .env  README.md  docker-compose.yml
keybase/: entrypoint.sh
kube/: README.md  auditor.yaml  blockValidator.yaml  blockWatcher.yaml  claim.yaml  config.ini  dbBackup.yaml  dbInit.yaml  environment_configmap_bitgrinpool.yaml  healthCheck.yaml  letsencrypt_floopool.yaml  letsencrypt_muglepool.yaml  makePayouts.yaml  mugle-hd_set.yaml  mugleStats.yaml  mugle_pv.yaml  mugle_set.yaml  muglepool_secrets.sh  muglewallet.yaml  muglewallet_claim.yaml  muglewallet_pv.yaml  muglewallet_secret.sh  nginx_bitgrinmining.yaml  paymentEstimator.yaml  paymentMaker.yaml  poolAPI.yaml  poolAPIv2.yaml  poolStats.yaml  poolblockUnlocker.yaml  rmq.yaml  shareAggr.yaml  splunk-bitgrinpool.yaml  splunk.yaml  splunkuf.yaml  statsValidator.yaml  stratum-hd.yaml  stratum-md.yaml  stratum.yaml  stratumx.yaml  tidyWallet.yaml  (+2 more)
logstash/: poolblockfilter.conf  sharefilter.conf
mugle/: Dockerfile  Makefile  libheath.py  mugle-server.toml  mugle-wallet.toml  run-wallet.sh  run.sh
mugle-js/webui/: Makefile  README.md  package.json  sitemap.xml
mugle-py/: Dockerfile
mugle-py/api/: EXAMPLES.md  README.md  api.py  payment_api.py
mugle-py/muglelib/: lib.py  mugle.py  muglestats.py  muglestats.py.save  pool.py  (+4 more)
nginx/: Makefile
splunk/: uf-outputs.conf
stratum/: Cargo.toml  Dockerfile  mugle-pool.toml  mugle-pool.toml.j2  run.sh
stratum/src/: main.rs
stratum/src/pool/: config.rs  consensus.rs  logger.rs  pool.rs  server.rs  util.rs  worker.rs
(+107 files in other folders)
